위화도 회군 doc

--- a/History/Korea/인물/20210125 정도전.md
+++ b/History/Korea/인물/20210125 정도전.md
@@ -11,7 +11,7 @@ tags: #한국사 #인물 #고려
 4. 1375년 (우왕 1) - 친원배명정책에 반대해 북원 사신을 맞이하는 문제로 권신 세력과 맞서다가 거평부곡에 유배.
 5. 1377년 - 유배에서 풀려남.
 6. 1383년 - 9년 간의 유배/유랑 생활을 청산하고, 이성계(李成桂)를 찾아가 연을 맺기 시작.
-7. 1388년 - [[위화도회군]]으로 이성계 일파가 실권장악 
+7. 1388년 - [[20210125 위화도회군]]으로 이성계 일파가 실권장악 
 8. 구세력의 탄핵으로 유배되었다가 정몽주가 이방원 일파에 의해 격살 되었을 때 유배에서 풀려나와 이성계를 추대해 조선 개창의 주역을 담당.
 	- 조선 왕조의 설계자 	
 	- [신진사대부](http://encykorea.aks.ac.kr/Contents/Item/E0070787)
