Fix date for History/Korea docs

--- a/History/Korea/사건/210125 위화도회군.md
+++ b/History/Korea/사건/210125 위화도회군.md
@@ -20,7 +20,7 @@ tags: #한국사 #사건 #고려
 - 이 후, 이성계가 조선 왕조를 설계하므로써 고려 왕조의 막을 내리게 된다.
 
 ## 관련 인물
-- [[20210125 정도전 | 정도전]]
+- [[210125 정도전 | 정도전]]
 - 이성계
 - 최영
 - 우왕
