--- a/ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md
+++ b/ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md
@@ -8,7 +8,7 @@ tags:  #곤도마리에 #近藤麻理恵 #독서
 
 > p23. 무엇보다 가장 아까운 것은 잃어버린 물건을 찾느라 허비한 시간이다. 그 시간을 다 합하면 직장인 1명이 1년에 평균 일주일 동안 일하는 시간과  맞먹는다. 4년이면 한 달이 되는 셈이다. 이러한 생산성 손실은 현금으로 환산하면 미국에서만 연간 890억 달러에 육박한다. 상위 5개 글로벌 기업의 수익을 합한 것보다 2배 이상 많은 금액이다.
 
-### -- 책상 한번 정리했을 뿐인데 직장 생활이 달라졌다
+#### -- 책상 한번 정리했을 뿐인데 직장 생활이 달라졌다
 > p24-25. 쉬지 않고 일하는 것 같아지만 결과가 나오지 않았다.
 > ...
 > 깊은 한숨을 내뱉으며 전화기를 내려놓자 고개가 절로 푹 떨어졌다. 맥없이 아래를 내려다보다가 난장판이 된 책상을 보고 깜짝 놀랐다.
@@ -20,7 +20,7 @@ tags:  #곤도마리에 #近藤麻理恵 #독서
 > ...
 > 집 안 정리 못지않게 업무 공간 정리도 중요하다는 사실을 깨달았다.
 
-### -- 잠재력을 끌어올리는 정리의 힘
+#### -- 잠재력을 끌어올리는 정리의 힘
 > p26. ...사무실은 동료들과 함께 쓰는 공간이다 보니, 깔끔한 책상과 지저분한 책상의 차이가 두드러져 보인다. 
 > ...
 > 몇몇 직원 평가서 조사 결과에 따르면, 업무 공간을 잘 정리할수록 지성과 야망이 넘치는 차분하고 온화한 직원으로 인정받은 가능성이 높다고 했다. 또 다른 조사에서는 많은 응답자가 정리를 잘하는 직원들이 다정하고 부리전하고 친절하며, 자신감 넘치는 사람으로 보인다고 했다. 그뿐 아니라 정리를 잘하는 사람들은 보드 쉽게 신뢰를 얻고, 빠른 시간 내에 승진할 확률이 훨씬 높다는 연구 결과도 있다.
@@ -32,4 +32,50 @@ tags:  #곤도마리에 #近藤麻理恵 #독서
 2. 기대치가 높아지면서 자부심과 동기가 향상된다
 3. 자부심과 동기가 향상되면서 일에 더욱 몰입할 수 있게 되고, 결과 또한 좋아진다
 
-### -- 지저분할수록 더 창의적이라는 편견
+<hr />
+
+2021-1-27
+#### -- 지저분할수록 더 창의적이라는 편견
+```text
+"어수선한 책상이 어수선한 정신을 의미한다면 텅 빈 책상은 무엇을 의미하는가?" - 알버트 아인슈타인
+```
+
+>p28. 
+>"책상이 지저분해도 괜찮은 거죠? 창의성을 자극하니까요."
+> 지저분할수록 생산성이 훨씬 높아지는 것 아니냐고? ... 지금 책상에 앉아 주위를 둘러본다. 그러고 나서 다음 질문에 답해보자.
+> 1. 지금 여기서 일하는 것이 진정으로 좋은가?
+> 2. 매일 이 책상에 앉아 일하는 것이 정말로 신나고 즐거운가?
+> 3. 여기서 내 창의력을  100% 발휘하고 있다고 확신하는가?
+> 4. 내일도 이 자리로 돌아오고 싶은가?
+> 
+이 모든 질문에 주저 없이 '그렇다'라는 답이 나온다면 직장에서 느끼는 만족도가 상당히 높다고 할 수 있다.
+
+지저분한 업무 환경에서 의욕이 감소하는 이유
+1. 뇌에 과부하 - 의욕을  끌어올리기 어럽게 된다
+2. 물건과 정보, 업무가 넘쳐나면 통제력과 선택 능력을 잃는다
+
+책상이 얼마나 깔끔하냐가 중요한게 아니다. 정리를 하므로써 잠재력을 끌어올리고 열정을 느끼게 만드는 업무환경이 무엇인지 아는 것이 가장 중요하다.
+
+#### -- '비물리적' 공간 정리를  아십니까 
+> p31. 
+연구에 따르면 직장에서 한 사람이 이메일을 확인하느라 쓰는 시간이 반나절이고, 열어보지 않은 이메일이 하루 평균 199통에 이른다고 한다.
+	moi: 그리니까 연구 출처를 알려달라구..
+	
+> p32.
+책상뿐 아니라 이메일과 파일, 다른  디지털 데이터까지 모두 체계적으로 정리하고, 회의 일정과 다양한 업무를 영리하게 소화한 후 퇴근하는 자신의 모습을 상상해보자. 
+
+#### -- 정리는 한 사람의 인생을 바꾼다
+> p33.
+"나는  돈을 벌기 위해 회사에 일하러 온 거지, 일을 즐기러 온 건 아니야. 일은 빨리 끝내고 여가를 즐겨야 인생이 훨씬 더 재밌어지지"
+...
+물론 일이란 돈을 받고 하는 것이기 때문에 그만큼 책임과 부담이 따른다.
+...
+그렇다고 체념한 채 직장 생활을 즐겁게 만들려는 노력조차 하지 않고 의무적으로 일만 한다면, 그것이야말로 괴롭지 않을까? 이왕 직장 생황을 할 거라면, 조금이라도 행복해지는 방식으로 일하는 것이 좋지 않을까?
+
+> p35.
+자신의 일이나 경력에 회의가 든다면, 지금이 정리를 시작하기 딱 좋은 시기다. 정리는 단순히 물건을 분류하고 치우는 일이 아니다. 한 사람의 인셩을 영원히 바꿔놓는 중요한 프로젝트다
+
+<hr />
+
+2021-01-28
+## 2장 누구나 할 수 있다, 한 번에 완벽하게 빠르게
