Update reading notes

--- a/ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md
+++ b/ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md
@@ -79,3 +79,38 @@ tags:  #곤도마리에 #近藤麻理恵 #독서
 
 2021-01-28
 ## 2장 누구나 할 수 있다, 한 번에 완벽하게 빠르게
+### 정리 리바운드
+1. 정리 시간을 따로 정해둔다.
+
+> p47.
+> 책상  위만 정리한다고 끝나는 게 아니다. 다시는 지저분해지지 않게 정리하고 싶다면 업무 공간에 있는 모든 물건의 자리를 알아야 한다. 어떤 물건을 얼마나 많이 갖고 있는가? 그것들을 어디에 수납하는가? 업무 성격상 계속 늘어나는 물건은 어떤 종류인가? 그렇게 늘어난 물건은 어디에 수납할 것인가? 이 모든 것을 확실하게 파악했을 때 정리를 끝냈다고 할 수 있다.
+> 
+물건은 카테고리별로 분류한 뒤 한 번에 싹 정리해야 한다. 오늘은 책상 위를 정리하고, 첫 번째 서랍장은 내일, 다른 서랍장은 그다음 날 정리하는 식으로 시간 날 때마다 조금씩 정리하면 절대 질서 있게 정리 하지 못한다. 
+
+> p49.
+다시 강조하지만 시간 날 때마다 정리하겠다고 생각하면 절대 정리를 끝내지 못한다.
+마감 시간을 정해놓고 정리 시간을 구체적으로 정해두는 게 가장 중요하다.
+한 번에 모든 물건을 분류해서 남길 것과 버릴 것을 결정하고, 남길 물건의 자리를 정해야 한다.
+
+### --무엇을 버리고 무엇을 남길 것인가
+> p49.
+어떤 물건을 남길지 혹은 버릴지 고민될 때는 스스로에게 이 물건이 '설레는 것'인지 질문을 던져보라고 조언한다..... 그래서 집 안 정리를 컨설팅할 때는 모든 물건을 손에 쥐어본 다음, 설레는 것만 남기고 나머지는 버리라고 권한다.
+
+	moi: 설렌다는 게 애매하기는 하다. 모든 물건에서 설렌다면? 반대로 맘에드는 게 하나도 없는 직장 공간에서는 책상까지 싹 다 버릴가? 
+	정리를 하고 싶은 근본적인 이유를 다시 한 번 생각해보라고 한다. 모든게 맘에 안들어도, 모든게 맘에 드는 것 같아도 챙길 것과 버릴 것은 있다.
+
+> p51.
+이 세 가지 카테고리를 기억해두자. 그 자체로 '영감을 주는 것'과 '기능적'이라 마음이 끌리는 것, '미래의 성장을 보장해주는 물건'을 남기는 것이다.
+...
+정리의 근본적인 목적은 물건을 버려 책상을 깨끗이 치우는 것이 아니라 잠재력과 생산성을 넘치도록 발휘하는 [환경]을 만드는 것임을 기억하기 바란다.
+
+> p52.
+> 그간 다른 사람들이 정리하는 것을 도우면서 싫어하는 물건만 버리고 싶어 한다는 것을 알았다. 하지만 싫어하는 것을 버렸다고 해서 정말 중요한 것을 저절로 찾을 수 있는 것은 아니다. 그러므로 정리를 할 때는 좋아하는 것에 집중해 긍정적인 면을 봐야 한다.
+
+`일상의 정리` - 하루 동안 사용한 물건들을 제자리에 돌려놓고 새로 생긴 물건의 자리를 정해두는 것.
+`축제의 정리`- 가지고 있는 모든 물건을 살펴보고  현재 자신의 삶에서 진정으로 중요한 것을 찾아 자신만의 방식으로 정리하는 것. 비교적 짧은 시간에 집중적으로 완벽하게 정리하는 것이 특징.
+
+<hr />
+
+2021-01-29
+## 성과를 끌어올리는 가장 간단한 기술 - 업무 공간 정리하기
