--- a/History/Korea/장소/210126 경복궁.md
+++ b/History/Korea/장소/210126 경복궁.md
@@ -27,3 +27,4 @@ tags: #장소 #조선 #문화유산 #이성계 #정도전 #세종
 
 ## 참고
 - [한국 민족 문화 대백과사전](https://encykorea.aks.ac.kr/Contents/Item/E0002434)
+- 읽기만 하면  내 것이 되는 1페이지 한국사365
