Updated and Add new doc in Korean History

--- a/History/Korea/장소/210126 경복궁.md
+++ b/History/Korea/장소/210126 경복궁.md
@@ -1,4 +1,4 @@
-tags: #장소 #조선 #문화유산 #이성계 #정도전 #세종
+tags: #장소 #조선 #문화유산 #이성계 #정도전 #세종 #한국사
 
 ## 경복궁
 서울특별시 종로구 세종로에 위치해있는 조선전기에 창건되어 정궁으로 이용된 궁궐. 외국인 관광객이 많이 찾는 대한민국의 대표적인 문화유산.
