Updated reading note

--- a/ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md
+++ b/ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md
@@ -112,5 +112,75 @@ tags:  #곤도마리에 #近藤麻理恵 #독서
 
 <hr />
 
-2021-01-29
+2021-01-30
 ## 성과를 끌어올리는 가장 간단한 기술 - 업무 공간 정리하기
+
+p62
+카테고리의 물건을 정리하는 규칙 --> "한 번에 한 가지 카테고리씩 정리"
+
+### 책 정리: 나만의 가치를 발견하는 과정
+> p64.
+그냥 책장에 꽂은 채 제목을 훌어보면서 남길 책을 고르는 게 낫겠다는 생각이 들더라도 제발 그러지 말길 바란다. 책장에 너무 오랫동안 묵혀뒀던 책은 배경의 일부가 되어 눈에 띄지 않기 때문이다. 바로 눈앞에 두고도 알아보지 못한다. 그 상태에서는 당신에게 영감과 아이디어를 주는 책이 무엇인지 고르기도 어렵다. 한 권 한 권 꺼내 손에 쥐어봐야 독립적인 개체로 보인다.
+
+p64
+설레는 책이 뭐지? 모르겠다면 자문해보자.
+
+1. 이 책을 언제 샀지?
+2. 몇 번이나 읽었지?
+3. 다시 읽고 싶은 건가?
+4. 아직 읽지 않은 책은 처음에 어떤 마음으로 구매했는가?
+6. 내 인생에서 어떤 역할을 하는 책인가?
+	- O -> 동기 부여가 되는 책
+	- O -> 그저 보기만 해도 행복해지는 책
+	- O -> 최신 정보를 알려주는 책
+	- O -> 업무 수행에 도움이 되는 책
+	- X -> 충동적으로 구매한 책
+	- X -> 남한텐 깊은 인상을 주고 싶어서 산 책
+	- X -> 읽을 것 같지 않은 선물 받은 책은 받은 순간 그 목적을 다했다. 한 때 즐거움을 주었다는 것에 만족하며 손에서 놓아주자.
+7. 이 책을 서점에서 본다면 지금이라도 구매할 책인가?
+8. 한물가서 흥미가 떨어지는 책인가?
+
+> 언젠가 '읽으려는'책은 읽을 날짜를 정해놓는 것이 좋다. 의식적으로 읽으려고 노력하지 않으면 그 '언젠가'는 절대 오지 않으니까 말이다.
+
+### 서류 정리: 전부 버린다는 각오로 살펴보기
+> p67.
+서류는 대체로 모두 버리길 권한다. 물론 한 장도 남겨두지 않고 몽땅 버려야 한다는 말이 아니다. 다만 그 정도로 강하게 각오를 다져야 반드시 필요한 것만 남기고 나머지를 버릴 수 있다는 뜻이다. 서류는 영감을 주는지 아닌지로 정리할 수 없는 품목이기에 내용을 하나하나 확인해야 한다.
+
+카테고리별 분류:
+1. 미결 서류
+	- 미지불된 청구서와 검토해야 하는 프로젝트 기획안 등등
+2. 필수 보존 서류
+	- 특정 보고서와 계산서, 계약서, 그 외에 내가 느끼는 감정과는 상관없이 보관해둬야 하는 서류들
+3. 희망 보존 서류
+	- 참고 자료로 삼거나 보기만 해도 열정과 의욕을 느끼게 해주는 서류들.
+	
+> p69.
+어떤 서류를 버려야 할지 모르겠다고? 그렇다면 만약 내가 지금 당장 당신의 사무실로 걸어 들어가 모든 서류를 치워버리겠다고 말한다면, 당신 어떤 서류를 구출하러 달려오겠는가?
+
+### 명함 정리: 반드기 간직해야 하는 것만 남기기
+이메일을 주고 받거나 SNS를 이용하는 사람들의 명함과는 작별해도 좋다. 불필요한 명함은 정리하되, 반드시 남겨야 할 이유가 있다면 주저하지 말고 자신 있게 간직하자. 
+
+###  소품 정리: 6가지 카테고리로 분류하기 (p76)
+1. 사무용품
+	- 책상 용품
+		-> 가위와 스테이플러와 같이 하나만 있으면 되는  것들.  종류별로 하나만 남기고 나머지와는 작별하자.
+	- 소모품
+		-> 포스트잇, 서류 집게, 공책, 문구, 등등 갖고 있다가 다 쓰는 것 용품. 어느 정도 여분이 필요하기는 하지만 서랍장이 넘치도록 많은 포스트잇이나 빨간 펜 10개를 구비해놓는 것이 효율적이지는 않다. 업무 특성에 비춰 적절하다 싶은 물품 개수를 정해놓고 사용하자.
+2. 전자 제품
+	- 지금은 사용하지 않는 충전 케이블이나 이어폰들, 책상에 둘 필요가 없다. 각 물건의 용도를 알아보고 쓸모를 다한 것에 감사한 후 작별을 고한다. 
+3. 업무 관련 소품
+	- 화가에게는 그림과 캔버스, 액세서리 디자이너에게는 구슬과 줄이, 화장품 회사 직원에게는 제조업체에서 받은 화장품 샘플이 있을 것이다. 이 처럼 각 직업마다 특유의 소품이 있다. 일과 직접적으로 연관되어 있다 보니 정리 할 때 특별한 가치를 발견할 가능성이 매우 높다. 동기부여를 얻기도 쉬워 중도 포기하지 않고 정리를 끝마칠 수 있다. 
+4. 개인 관리 용품
+	- 핸드크림과 안약, 비타민, 등등 
+	- 이상적인 직장 생활을 실현하는 데 도움이 되는 개인 관리 용품이 무엇인지, 또 필요 없는 것은 무엇인지 생각해보자.
+5. 간식과 식품 관리 용품
+	- 테이크아웃 음식에 딸려온 케첩과 소금, 냅킨,  플라스틱 포크, 등등
+	- 간식거리의 경우 유효기한을 확인해보고, 지금 당장 얼마나 필요한지 개수를  정해둔다.
+6. 추억의 물건
+	- 사진과 편지와 같은 감상할 가치가 있어 버리기 힘든 것들.
+	- "이걸 책상에 두면 어떤 기분이 들까?" 한때는 의지가 되었으나 더 이상 필요없다고 느낀다면 감사한 후에 작별을 고하자.
+
+<hr />
+
+### 책상 정리: 상자를 활용해 똑똑하게 수납하기
+p80
