Add and update Ruby posts

--- a/Ruby/Basic Ruby/210129 ASCII.md
+++ b/Ruby/Basic Ruby/210129 ASCII.md
@@ -1,6 +1,6 @@
 tags: #ruby
 
-## Ascii
+## ASCII
 Each character in a string like `Hello world!` is represented by a number between 0 and 127. 
 
 For example:
