Move history folder to ReadingNotes

--- a/ReadingNote/짧고 굵게 일합니다.md
+++ b/ReadingNote/짧고 굵게 일합니다.md
@@ -1,5 +1,9 @@
 tags:  #곤도마리에 #近藤麻理恵 #독서
 
+# 짧고 굵게 일합니다 - 곤도 마리에
+
+<hr />
+
 2021-01-26
 ## 1장 지금 당신에게는 '정리'가 필요합니다
 >p22. 지저분한 환경이 여러 면에서 사람들에게 생각보다 훨씬 더 큰 영향을 미친다는 다양한 연구 결과가 있다. 미국에서 직장인 1,000명을 대상으로 실시한 조사에서 90%가 어지러운 환경으로부터 부정적 영향을 받는다고 답했다. 지저분한 업무 공간에서는 생산성이 떨어지고 부정적인 기분이 들며, 동기가 약해지고 행복감이 감소한다는 것이었다.
