--- a/ReadingNote/짧고 굵게 일합니다.md
+++ b/ReadingNote/짧고 굵게 일합니다.md
@@ -96,7 +96,7 @@ tags:  #곤도마리에 #近藤麻理恵 #독서
 마감 시간을 정해놓고 정리 시간을 구체적으로 정해두는 게 가장 중요하다.
 한 번에 모든 물건을 분류해서 남길 것과 버릴 것을 결정하고, 남길 물건의 자리를 정해야 한다.
 
-### --무엇을 버리고 무엇을 남길 것인가
+### -- 무엇을 버리고 무엇을 남길 것인가
 > p49.
 어떤 물건을 남길지 혹은 버릴지 고민될 때는 스스로에게 이 물건이 '설레는 것'인지 질문을 던져보라고 조언한다..... 그래서 집 안 정리를 컨설팅할 때는 모든 물건을 손에 쥐어본 다음, 설레는 것만 남기고 나머지는 버리라고 권한다.
 
@@ -122,7 +122,7 @@ tags:  #곤도마리에 #近藤麻理恵 #독서
 p62
 카테고리의 물건을 정리하는 규칙 --> "한 번에 한 가지 카테고리씩 정리"
 
-### 책 정리: 나만의 가치를 발견하는 과정
+### -- 책 정리: 나만의 가치를 발견하는 과정
 > p64.
 그냥 책장에 꽂은 채 제목을 훌어보면서 남길 책을 고르는 게 낫겠다는 생각이 들더라도 제발 그러지 말길 바란다. 책장에 너무 오랫동안 묵혀뒀던 책은 배경의 일부가 되어 눈에 띄지 않기 때문이다. 바로 눈앞에 두고도 알아보지 못한다. 그 상태에서는 당신에게 영감과 아이디어를 주는 책이 무엇인지 고르기도 어렵다. 한 권 한 권 꺼내 손에 쥐어봐야 독립적인 개체로 보인다.
 
@@ -146,7 +146,7 @@ p64
 
 > 언젠가 '읽으려는'책은 읽을 날짜를 정해놓는 것이 좋다. 의식적으로 읽으려고 노력하지 않으면 그 '언젠가'는 절대 오지 않으니까 말이다.
 
-### 서류 정리: 전부 버린다는 각오로 살펴보기
+### -- 서류 정리: 전부 버린다는 각오로 살펴보기
 > p67.
 서류는 대체로 모두 버리길 권한다. 물론 한 장도 남겨두지 않고 몽땅 버려야 한다는 말이 아니다. 다만 그 정도로 강하게 각오를 다져야 반드시 필요한 것만 남기고 나머지를 버릴 수 있다는 뜻이다. 서류는 영감을 주는지 아닌지로 정리할 수 없는 품목이기에 내용을 하나하나 확인해야 한다.
 
@@ -161,10 +161,10 @@ p64
 > p69.
 어떤 서류를 버려야 할지 모르겠다고? 그렇다면 만약 내가 지금 당장 당신의 사무실로 걸어 들어가 모든 서류를 치워버리겠다고 말한다면, 당신 어떤 서류를 구출하러 달려오겠는가?
 
-### 명함 정리: 반드기 간직해야 하는 것만 남기기
+### -- 명함 정리: 반드기 간직해야 하는 것만 남기기
 이메일을 주고 받거나 SNS를 이용하는 사람들의 명함과는 작별해도 좋다. 불필요한 명함은 정리하되, 반드시 남겨야 할 이유가 있다면 주저하지 말고 자신 있게 간직하자. 
 
-###  소품 정리: 6가지 카테고리로 분류하기 (p76)
+###  -- 소품 정리: 6가지 카테고리로 분류하기 (p76)
 1. 사무용품
 	- 책상 용품
 		-> 가위와 스테이플러와 같이 하나만 있으면 되는  것들.  종류별로 하나만 남기고 나머지와는 작별하자.
@@ -186,5 +186,62 @@ p64
 
 <hr />
 
-### 책상 정리: 상자를 활용해 똑똑하게 수납하기
-p80
+2021.02.01
+
+### -- 책상 정리: 상자를 활용해 똑똑하게 수납하기
+남겨야 할 것만 잘 골랐다면, 이제는 수납할 차례!
+
+수납의 기본 법칙:
+- 카테고리별로 상자를 이용해 물건을 수납하고,
+- 책상 위에는 아무것도 올려놓지 않는다
+- 모든 물건의 자리를 정해 아주 작은 물건까지도 어디에 있는지 정확하게 알아야 한다.
+
+1. 자리를 정하고 카테고리별로 수납한다
+	- 정리 리바운드의 이유는 모든 물건에 자리를 정하지 못했기 때문. 물건을 쓰고 난  직후 즉각 제자리에 돌려놓는 습관을 들여야 정리가 쉬워진다.
+	- 동일한 물건을 여러 장소에 수납하지 않는다.
+2. 상자를 이용하되 물건은 세워서 수납한다
+	- 공간이 한정된 책상에서는 물건을 보관할 때 효율성을 극대화해야 한다.
+	- 크기다 다양한 상자를 서랍장에 넣어 칸막이로 사용한다.
+	- 동일한 카테고리의 물건은 크기와 모양에 맞는 공간에 수납해보자.
+		- ex) USB 같은 물건은 작은 상자에, 약이나 비타민 등 개인 용품은 중간 크기 상자에.
+	- 상자는 서랍에 들어가는 크기면 어떤 것이든 괜찮다.
+	- 곤도마리에는 명함 상자와 스마트폰 상자를 자주 이용한다고 한다.
+	- 가능한 한 모든 것을 세워서 수납하자. 훨씬 깔끔해보이고 수납공간을 최대화할 수 있다.
+3. 책상 위에는 아무것도 두지 않는 것이 원칙이다
+	- 책상 위는 수납공간이 아니라 작업 공간이다. 그러므로 아무것도 두지 않는 것이 원칙이다.
+	- 모든 물건은 서랍장과 선반에 자리를 정해 수납한다.
+	- 하지만 무조건 모든 사람이 휑하다 싶을 정도로 말끔해야 하는 것은 아니다. 필기도구를 서랍장이 아닌 연필꽂이에 꽂아두고 쓰는 편이 효율적이라고 판단되면 그렇게 하는 것이 맞다.
+
+### 미후유의 삶에 나타난 놀라운 변화 (p83)
+> p84.
+버릴 것이 하나도 없다고  확신하던 사람들도 물건을 모두 꺼내놓고 하나하나 손에 쥐어보며 꼭 필요한 것인지 스스로에게 물어본 후 3분의 2를 버렸다. 막연히 필요하겠다고 생각하는 것과 진짜 간직할 가치가 있다고 느끼는 것은 별개다.
+
+정리의 진정한 가치란?
+- 깨끗해져서 기쁜 것?
+- 업무 효율성 향상?
+- 위 모두가 해당되지만 곤도마리에는 그 이상의 가치, 자아를 재발견 할 수 있다고 한다.
+	- 물건을 하나하나 마주 보며, 자신시 진정 원하는 것과 행복을 느끼는 것이 무었인지 선명하게 보인다고 한다.
+
+미후유 (Mifuyu)의 사례
+- 고급 패션 잡지의 마케팅 담당자.
+- 다른 사람의 시기를 받을정도로 업계에서 승승장구하던 그녀. 하지만 어째서인지 무언가 잘못됐다는 느낌을 떨쳐버릴 수 없었고 고민하다 레슨을 받기로 한다.
+- 그녀는 먼저 집부터 정리한다.
+	- 정리를 하면서 유명 디자이너의 드레스나 고가의 옷들이 조금도 행복감을 주지 않는다는 것을 깨닫고 깜짝 놀란다. 신발, 하이힐도 마찬가지.
+	- 결국 그녀는 4분의 1만 남기고 모두 처리한다.
+- 그녀는 업무 공간도 정리하기로 마음먹는다.
+	- 으레 그렇듯 그녀의 책상은 잡지와 원고로 뒤덮여 있었다.
+	- 하지만 4시간 동안 집중해서 정리를 끝내자 그녀의 업무 공간은 처음 출근한 날처럼 말끔해져 있었다.
+	- 월요일이 되자 말끔한 책상을 보고 그녀가 그만두려는 줄 알고 사람들이 깜짝 놀랐다고 한다.
+	- 하지만 가장 놀란 건 미후유 자신. 얼마 전까지 과로로 우울증 진단을 받고 병가를 내야 할 정도였는데, 정리가 마음의 평정을 되찾아 주었다. 이 덕에 그녀는 차분한 마음으로 다시 일에 집중할 수 있게 되었다.
+
+	> p86.
+	정리를 하면서 물건을 마주 보는 것은 자신의 과거를 마주하는 것과 같다. 정리를 하다 보면 가끔 '이걸 왜 샀지?'라며 후회하거나 과거에 자신이 내린 결정에 당혹해하기도 할 것이다. 하지만 그런 감정을 그대로 받아들여야 한다. 진짜 필요한 것이 무엇인지 알게 되어 감사하다는 마음을 갖고 버릴 것은 버려야 한다.
+	> 
+	이것이 바로 자신이 과거에 했던 선택을 인정하는 과정이다. 정리를 하면서 자신이 진정으로 원하는 것을 알아내고, 무엇을 어떻게 할지 결정하는 과정을 끝없이 반복하게 된다. 그러다 보면 자신의 모든 선택에 확신을 갖는 긍정적 관점이 생겨난다. 
+	- 3년 후, 미후유는 공영방송 프로그램의  진행자이지 몇 권의 책을 쓴 작가가 되었다.
+	- 지금은 자신만의 독특한 업무 스타일을 확립한 롤 모델로 평가받는다. 
+
+<hr  />
+
+2021.02.02
+### 물리적 업무 공간 정리를 끝냈다면  (p88)
