--- a/ReadingNote/짧고 굵게 일합니다.md
+++ b/ReadingNote/짧고 굵게 일합니다.md
@@ -243,5 +243,42 @@ p64
 
 <hr  />
 
-2021.02.02
-### 물리적 업무 공간 정리를 끝냈다면  (p88)
+2021.02.04
+
+## 4장 디지털 데이터 정리하기
+
+### -- 어쨌거나 '체계화'는 중요하다 (p95)
+먼저 하드 또는 네트워크 드라이브의 문서 폴더와 그 안의 하위 폴더부터 정리한다. 그리고 바탕화면을 살펴본다. 같은 방법으로 사진이나 동영상 폴더 등 다른 폴더도 정리. 
+
+문서 하나하나 살펴보고 아래와 같이 물어본다:
+1. 업무를 처리하는 데 꼭 필요한가?
+2. 미래의 업무에 영감을 불어넣거나 길잡이가 되는 파일인가?
+3. 비전과 잠재력을 갖추는 데 도움이 되는 파일인가?
+
+위 질문에 "아니다"라는 답이 나오는 파일은 즉시 삭제한다.
+
+기술적으로 삭제할 수 없는 문서는 주요 문서 폴더가 아닌 아카이브 폴더로 옮겨놓는다.
+꼭 보관하고 싶은 문서는 확실하게 구분하도록 한다.
+
+카테고리:
+1. 현재 진행 프로젝트
+	프로젝트별 하위 폴더를 만든다. 하위 폴더는 10개를 넘지 않도록 한다.
+2. 기록 자료
+	정기적으로 살펴보는 정책이나 절차 관련 문서를 넣어둔다. 법률 계약서와 직원 인사 파일 등이 이에 해당뙨다.
+3. 보관 자료
+	나중에 사용할 과거 프로젝트 관련 서류를 보관한다. 예를들면 새로운 프로젝트에 도움이 되는 이전에 사용한 고객 관련 프로젝트라든가, 경쟁사 벤치마킹 자료, 산업 연구 자료 등등 훗날 도움이 될 만한 연구 자료들.
+4. 개인 자료
+	위에 해당하지 않는, 개인 파일들을 이곳에 보관한다.
+	
+#### -- 하루를 발목 잡는 이메일을 효과적으로 통제하는 법
+> p101.
+연구에 따르면 이메일을 처리하는 데 많은 시간을 쓸수록 생산성은 낮아지고 스트레스는 높아진다.
+
+- 이메일을 확인하고 처리하는 시간을 정해둔다. 
+
+어떤 메일을 남길지 버릴지 결정할 때는 다음과 같이 질문해보자:
+- 향후 업무 처리에 필요한 메일인가?
+- 다시 읽었을 때 향후 업무에 도움이 되는 지식과 영감, 동기부여를 얻을 수 있는 메일인가?
+
+<hr />
+2021.02.05
