--- a/ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210128 탕평.md
+++ b/ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210128 탕평.md
@@ -1,4 +1,5 @@
 tags: #문화 #제도 #한국사 
+<hr />
 
 ## 탕평책(蕩平策)
 
@@ -22,4 +23,4 @@ tags: #문화 #제도 #한국사
 - 하지만 정조 사후 세도 정치가 본격화되면서 안동 김씨 같은 소수의 문벌 가문이 권력을 장악함에 따라 탕평의 노력은 수포로 돌아가고 만다.
 
 ## Reference
-- 읽기만 하면  내 것이 되는 1페이지 한국사365
+- [읽기만 하면 내 것이 되는 1페이지 한국사365](http://www.yes24.com/Product/Goods/90460886)
