--- a/ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210127 청화백자.md
+++ b/ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210127 청화백자.md
@@ -27,4 +27,4 @@ tags: #유적 #유물 #한국사
 
 ## Reference
 - [한국 민족 문화 대백과사전](http://encykorea.aks.ac.kr/Contents/Item/E0056866)
-- 읽기만 하면  내 것이 되는 1페이지 한국사365
+- [읽기만 하면 내 것이 되는 1페이지 한국사365](http://www.yes24.com/Product/Goods/90460886)
