--- a/ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/학문-철학/210129 성리학.md
+++ b/ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/학문-철학/210129 성리학.md
@@ -31,4 +31,4 @@ tags: #한국사 #학문 #철학
 - 조선 시대에 성리학은 더욱 심화 발전하여 이황, 이이 때는 독자적인  조선 성리학으로 성장. 하지만 새로운 사상을 수용하지 못하고 사고방식이 극도로 경직되는 등 조선 후기 성리학은 사회 발전에 커다란 걸림돌이 되고 만다.
 
 ## 참고
-- 읽기만 하면  내 것이 되는 1페이지 한국사365
+- [읽기만 하면 내 것이 되는 1페이지 한국사365](http://www.yes24.com/Product/Goods/90460886)
