Update reading note

--- a/ReadingNote/짧고 굵게 일합니다.md
+++ b/ReadingNote/짧고 굵게 일합니다.md
@@ -282,3 +282,39 @@ p64
 
 <hr />
 2021.02.05
+
+### -- 스마트폰에 집중력을 도둑맞고 있다면 (p106)
+- 1인당 하루에 스마트폰을 만지는 횟수는 평균 85회 -> 약 5시간이 넘는다.
+- 스마트폰이 울리지 않고 **조용히 책상 위에 놓여 있기만 해도 업무 처리 능력이 떨어질 수 있다**.
+> p107
+> 스마트폰에 접근하기 쉬울수록 연산과 기억력 테스트 결과가 나빠진다는 것이었다. 그중에서도 책상에 올려둔 스마트폰이 가장 접근하기 쉬웠다. 다시 말해 스마트폰의 존재 자체가 과제 수행 능력을 떨어뜨린다는 뜻이다. 
+
+필요없는 앱은 삭제하자. 앱을 정리하면 영감을 부여하거나 잠재력을 높여줄 다른 무언가를 설치할 공간이 생기고, 배터리 수명도 길어질수 있다.
+1. "꼭 필요한 앱인가?"
+2. "탁월한 성과를 내는 데 도움이 되는 앱인가?"
+3. "나를 설레게 만드는 앱인가?"
+
+위 세 가지 질문에 답해보고 간직할 가치가 없는 앱은 삭제한다.
+
+<hr />
+
+## 5장: 시간 정리하기
+### -- 불필요한 활동이 하루를 망친다
+심리학에서 말하는 잡동사니 활동에 빠지게 하는 세 가지 함정:
+1. '과잉 노력의 함정' -> 일을 과하다 싶게 열심히 해도 좋은 결과를 얻지 못함
+2. '긴급 작업의 함정' -> 중요한 일보다 긴급한 일을 우선시 함
+3. '멀티 태스킹의 함정'
+
+### 과잉 노력의 함정 (p117)
+노력해서 무언가를 성취하면 정말 기분이 좋다. 하지만 가치가 없는, 쓸데없는 것에 에너지를 전부 쏟아붓는다면, 모든 것이 물거품이 되어 버린다면 어떤 기분일까? 
+
+왜 이런 쓸데없는 짓을 할까 싶겠지만, 사람들은 중요하지 않은 일에 생각보다 쉽게 많은 에너지를 투자한다.
+
+>p119
+>인간이라면 누구나 보상과 경쟁을 추구하지만, 그 때문에 잘못된 길로 들어서기 쉽다. 시간 관리 계획을 세울 때 가치 없다고 생각하는 보상을 받으려고 좋아하는 활동을 포기해서는 절대 안 된다. 자신이 누구인지, 진정으로 원하는 것은 무엇인지 알고 염두에 두면 잘못된 목표를 추구하다가 후회하는 사태를 막을 수 있다.
+
+<hr />
+
+2021-02-06
+
+### 긴급 작업의 함정 (p119)
