--- a/Ruby/Basic Ruby/210129 ASCII.md
+++ b/Ruby/Basic Ruby/210129 ASCII.md
@@ -1,4 +1,7 @@
 tags: #ruby
+related: [[210206 Data types pt.3]]
+
+<hr />
 
 ## ASCII
 Each character in a string like `Hello world!` is represented by a number between 0 and 127. 
