--- a/Data Structure/201105 map vs. unordered-map.md
+++ b/Data Structure/201105 map vs. unordered-map.md
@@ -1,3 +1,7 @@
+tags: #map #unordered-map #data-structure 
+
+<hr />
+
 C++에서 `map`과 `unordered_map`의 내부 구현이 다른 걸 몰랐다. 둘 다 트리를 이용한 줄 알았는데 하나는 트리, 하나는 해시테이블을 사용한다.
 이 부분을 간략히 정리해봤다.
 
