Update doc's language'

--- a/Data Structure/Array/201031 配列(Array)とは.md
+++ b/Data Structure/Array/201031 配列(Array)とは.md
@@ -1,6 +1,9 @@
-tags: #array #data-structure
+tags: #array #data-structure #japanese 
 
 <hr />
+
+[[201031 What is an array | 🇺🇲 English]]
+[[201031 배열(array)이란| 🇰🇷 한국어]]
 
 ## 配列とは
 
