Add JS Array methods pt.1'

--- a/JavaScript/210207 Arrays.md
+++ b/JavaScript/210207 Arrays.md
@@ -1,4 +1,5 @@
 tags: #JavaScript #data-type #modern-js 
+related: [[210208 Array methods pt.1]]
 
 <hr />
 
@@ -8,7 +9,6 @@ Every images used in this doc is from [https://javascript.info/array](https://ja
 Objects serve good purpose for storing keyed collections of values; however, it is not a good solution to store something in order. Objects are not meant for such use. Instead, we have `Array` structure.
 
 The array is a structure that maintains the order. It is an ordered collection.
-
 
 ## Declaration
 There are two syntaxes for creating an empty array:
