Add modern js new doc

--- a/JavaScript/210207 Arrays.md
+++ b/JavaScript/210207 Arrays.md
@@ -1,5 +1,5 @@
 tags: #JavaScript #data-type #modern-js 
-related: [[210208 Array methods pt.1]]
+related: [[JavaScript/210208 Array methods pt.1]]
 
 <hr />
 
