--- a/JavaScript/210207 Arrays.md
+++ b/JavaScript/210207 Arrays.md
@@ -1,4 +1,4 @@
-tags: #JavaScript #data-type #modern-js 
+tags: #JavaScript #data-type #modern-js #english
 related: [[JavaScript/210208 Array methods pt.1]]
 
 <hr />
