--- a/알고리즘과 자료구조 스터디/커리큘럼.md
+++ b/알고리즘과 자료구조 스터디/커리큘럼.md
@@ -1,58 +1,103 @@
-tags: #study_group #curriculum #algo_and_ds
+tags:#study_group #curriculum #algo_and_ds
 
-2021 February 27th
+---
 
-1. 정기모임에서 새로운 알고리즘&자료구조을 소개하고 간단히 개념이랑 pseudocode를 살펴보고 실제 구현과 문제는 스스로 풀고 정리, 다음 정기모임 전반에 회고, 코드리뷰, 등등을 진행. 그리고 후반에 새로운 알고리즘&자료구조 소개. 이 과정을 반복.
+🐱GitHub → [https://github.com/devouring-algorithm-ds](https://github.com/devouring-algorithm-ds)
 
-- 배열 & 연결리스트
-	- 데이터 접근, 삽입, 삭제 시간복잡도 비교 
-	- 단일 연결리스트 구현
-	- 프로그래밍 문제 풀어보기
-- 이중 & 원형 연결리스트
-	- 차이점 비교 & 구현
-	- 프로그래밍 문제 풀어보기
-- 스택 & 큐
-	- 둘의 차이점
-	- 배열과 연결리스트로 구현
-	- 프로그래밍 문제 풀어보기
-- 트리
-	-  트리 용어
-	- 이진트리 (binary tree) 구현
-	- 순회 (traversal) - inorder, preorder, postorder
-	- 수식 트리(Expression Tree)의 구현
-	- 프로그래밍 문제 풀어보기
-- 우선순위 큐 & 힙
-	- 우선순위 큐 & 힙 이해  
-	- 우선순의 큐 & 힙 구현
-	- 프로그래밍 문제 풀어보기
-- 정렬
-	- O(n^2) 단순한 알고리즘 (버블, 선택, 삽입)
-	- O(nlgn) 복잡한 알고리즘 (merge, quick)
-	- 프로그래밍 문제 풀어보기
-- 탐색 (I)
+## 정기모임
+
+-  정기모임 매주 월요일 오후 9시 (JST)
+-  진행 방식
+   -   지난번 공부한 알고리즘/자료구조 구현에 대한 회고.
+   -   현재 장애가 되고 있는 부분이 있다면 공유하고 해결책을 같이 생각해본다.
+   -   구현한 부분 (깃허브에 미리 올렸다면 피드백이 있을겁니다) 코드리뷰.
+   -   해당 지식을 사용해 풀어본 문제 풀이 피드백.
+   -   새로운 알고리즘 || 자료구조 소개.
+
+---
+
+## 커리큘럼
+
+-  Week 1 → 배열 & 연결리스트
+	-  데이터 접근, 삽입, 삭제 시간복잡도 비교
+	-  단일 연결리스트 (singly linked list) 구현 (pseudocode)
+-  이중 & 원형 연결리스트
+	-  차이점 비교
+	-  이중 연결리스트 구현
+	-  원형 연결리스트 구현
+-  스택 & 큐
+	-  차이점 비교
+	-  배열과 연결리스트로 구현
+-  트리 (I)
+	-  트리 용어 알아보기
+	-  이진트리 (binary tree) 구현
+	-  순회 (traversal) 알고리즘 - inorder, preorder, postorder
+-  트리 (II)
+	-  수식 트리(Expression Tree) 구현
+-  우선순위 큐 & 힙
+	-  우선순위 큐 & 힙 이해
+	-  우선순의 큐 & 힙 구현
+-  정렬
+	-  O(n^2) 단순한 알고리즘 (버블, 선택, 삽입)
+	-  O(nlgn) 복잡한 알고리즘 (merge, quick)
+-  탐색 (I)
 	- 순차 탐색 (linear search)
-	- 이진 탐색 (binary search)
-	- 보간 탐색 (interpolation search)
-	- 이진탐색트리 (binary search tree) 
-	- 구현
-	- 프로그래밍 문제 풀어보기
-- 탐색 (II)
-	- 균형 잡힌 이진 탐색 트리: AVL 트리의 이해
-	- AVL 트리 구현
-	- 프로그래밍 문제 풀어보기
-- 그래프 (I)
-	- 그래프의 이해와 종류  
-	- 인접 리스트 (adjacency list) 방식으로 구현
-	- 인접 행렬 (adjacency matrix) 방식으로 구현
-	- 그래프의 탐색  (DFS & BFS)
-	- 프로그래밍 문제 풀어보기
-- 그래프 (II) 
-	- 최단 경로 구하기
-		- 다익스트라 (Dijkstra) 알고리즘 (하나의 목적지로 가는 모든 최단 경로)
-		- 플로이드 & 워셜 (Floyd–Warshall) 알고리즘 (모든 최단 경로)
-	- 프로그래밍 문제 풀어보기
-- 그래프 (III) 
-	- 최소 비용 신장 트리 (MST, Minimum Spanning Tree)
-		- Kruskal MST 알고리즘
-		- Prim MST 알고리즘
-	- 프로그래밍 문제 풀어보기
+	-  이진 탐색 (binary search)
+	-  보간 탐색 (interpolation search)
+	- 이진탐색트리 (binary search tree) 구현
+-  탐색 (II)
+	-  AVL 트리의 이해 & 구현
+-  그래프 (I)
+	-  그래프의 종류
+	-  인접 리스트 (adjacency list) 방식으로 구현
+	-  인접 행렬 (adjacency matrix) 방식으로 구현
+	-  그래프의 탐색 (DFS & BFS)
+-  그래프 (II)
+	-  최단 경로 구하기
+		-  다익스트라 (Dijkstra) 알고리즘 (하나의 목적지로 가는 모든 최단 경로)
+		-  플로이드 & 워셜 (Floyd–Warshall) 알고리즘 (모든 최단 경로)
+-  그래프 (III)
+	-  최소 비용 신장 트리 (MST, Minimum Spanning Tree)
+		-  Kruskal MST 알고리즘
+		-  Prim MST 알고리즘
+
+---
+
+## ✏️ 공부법
+
+_HeeJeongKwon 님의 [알고리즘 공부법](https://gmlwjd9405.github.io/2018/05/14/how-to-study-algorithms.html)을 참고하였습니다._
+
+1. 먼저 알고리즘의 개념을 공부하여 이해한다.
+2. 관련된 알고리즘 문제를 풀어본다.
+   -   한 문제는 길어야 2시간 정도만 고민한다.
+   -   모르겠으면 포기하고 정답 소스를 보거나 다른 사람의 풀이를 본다.
+   -   완벽하지 않아도 일부만 이해하는 것으로 충분하다!
+3. 1, 2번에서 이해가 잘 가지 않는 부분이 있으면 질문한다.
+   -   설마 이런 것을 질문해도 될까 고민되는 것도 질문해야 한다.
+   -   스터디원, 친구 또는 커뮤니티를 적극 활용하자!
+4. 1, 2, 3번 후에 알고리즘을 다시 이해해보고 문제도 다시 풀어본다.
+   -   모르겠으면 포기하고 다시 풀이를 본다.
+   -   그래도 모르겠으면, 다른 일을 하거나, 놀러 나가거나, 다른 알고리즘 이론에 대해 공부하거나 다른 알고리즘 문제를 풀어본다.
+
+### 🔍 TIP
+
+-  충분히 고민해보고 최대한 노력해보고 나서 포기하는 것이 중요하다.
+-  스스로 생각해서 해결하지 않고 답을 보고 해결했어도 그 문제는 해결했다고 생각하자.
+   -   1개를 3일에 걸쳐서 푸는 것보다 3개를 1일 동안 푸는 것이 더 좋다.
+-  사용할 수 있는 관련된 라이브러리를 익혀서 사용하자.
+   -   미적분 문제를 풀기 위해서 굳이 미적분을 스스로 생각해서 만들 필요가 없이 공식을 이용하는 것과 같은 개념이다.
+
+---
+
+## 온라인저지
+
+-  백준: [https://www.acmicpc.net](https://www.acmicpc.net)
+-  LeetCode: [https://leetcode.com](https://leetcode.com)
+
+---
+
+## 알고리즘 공부 방법 참고
+
+-  [https://baactree.tistory.com/14](https://baactree.tistory.com/14)
+-  [https://blog.naver.com/kks227/220769870195](https://blog.naver.com/kks227/220769870195)
+-  [https://gmlwjd9405.github.io/2018/05/14/how-to-study-algorithms.html](https://gmlwjd9405.github.io/2018/05/14/how-to-study-algorithms.html)
