--- a/JavaScript/210125 4.4 Method and 'this'.md
+++ b/JavaScript/210125 4.4 Method and 'this'.md
@@ -1,6 +1,6 @@
 tags: #JavaScript #object #english
 
-## Object methods, "this"
+## 4.4 Object methods, "this"
 Let's recall what object is from previous units.
 **Object** - an entity that represents the real world object.
 ```js
