--- a/JavaScript/210125 4.5 Constructor, operator 'new'.md
+++ b/JavaScript/210125 4.5 Constructor, operator 'new'.md
@@ -1,6 +1,6 @@
 tags: #JavaScript #object #english
 
-## Constructors
+## 4.5 Constructors
 In JavaScript, constructors are not a special type of a function. They are just regular functions. So there are two conventions to specify a constructor function:
 1. Named with capital letter first
 2. Should be executed only with `new` operator.
