--- a/JavaScript/210126 4.6 Optional chaining.md
+++ b/JavaScript/210126 4.6 Optional chaining.md
@@ -1,6 +1,6 @@
 tags: #JavaScript #object #english
 
-## Optional chaining '?.'
+## 4.6 Optional chaining '?.'
 > Recently added feature. Older browsers may need *polyfills*.
 
 The optional chaining `?.` is a safe way to access nested object properties.
