--- a/JavaScript/210128 4.7 Symbol type.md
+++ b/JavaScript/210128 4.7 Symbol type.md
@@ -1,6 +1,6 @@
 tags: #JavaScript #object #english
 
-## Symbol type
+## 4.7 Symbol type
 Object property keys may be either of string type, or of symbol type.o
 
 ### symbols
