--- a/JavaScript/210201 5.1 Methods of primitives.md
+++ b/JavaScript/210201 5.1 Methods of primitives.md
@@ -1,6 +1,6 @@
 tags: #JavaScript #data-type #english
 
-## Methods of primitives
+## 5.1 Methods of primitives
 In JavaScript we can work with primitives as if they're objects.
 ### primitives
 - a value of a primitive type.
