--- a/JavaScript/210203 5.2 Numbers.md
+++ b/JavaScript/210203 5.2 Numbers.md
@@ -2,7 +2,7 @@ tags: #JavaScript #data-type #english
 
 <hr />
 
-## Numbers 
+## 5.2 Numbers 
 There are two types of numbers in modern JavaScript:
 1. Regular numbers - [IEEE-754](https://en.wikipedia.org/wiki/IEEE_754-2008_revision) (double precision floating point numbers)
 2. [BigInt](https://javascript.info/bigint) numbers.
