--- a/JavaScript/210207 5.4 Arrays.md
+++ b/JavaScript/210207 5.4 Arrays.md
@@ -1,11 +1,11 @@
 tags: #JavaScript #data-type #modern-js #english
-related: [[JavaScript/210208 Array methods pt.1]]
+related: [[210208 5.5 Array methods pt.1]]
 
 <hr />
 
 Every images used in this doc is from [https://javascript.info/array](https://javascript.info/array)
 
-## Arrays
+## 5.4 Arrays
 Objects serve good purpose for storing keyed collections of values; however, it is not a good solution to store something in order. Objects are not meant for such use. Instead, we have `Array` structure.
 
 The array is a structure that maintains the order. It is an ordered collection.
