--- a/JavaScript/210208 5.5 Array methods pt.1.md
+++ b/JavaScript/210208 5.5 Array methods pt.1.md
@@ -1,9 +1,9 @@
 tags: #JavaScript #data-type #modern-js #english
-related: [[210207 Arrays]] | [[210210 Array methods pt.2]]
+related: [[210207 5.4 Arrays]] | [[210210 5.5 Array methods pt.2]]
 
 <hr />
 
-## Array methods
+## 5.5 Array methods
 
 ## Add / Remove items
 We've seen couple methods that add/remove in the previous chapter (check the related post).
