--- a/JavaScript/210210 5.5 Array methods pt.2.md
+++ b/JavaScript/210210 5.5 Array methods pt.2.md
@@ -1,9 +1,9 @@
 tags: #JavaScript #data-type #modern-js #english
-related: [[210207 Arrays]] | [[210208 Array methods pt.1]]
+related: [[210207 5.4 Arrays]] | [[210208 5.5 Array methods pt.1]]
 
 <hr />
 
-## Array methods
+## 5.5 Array methods
 
 ## Iterate: forEach
 
