--- a/JavaScript/210216 5.6 Iterables.md
+++ b/JavaScript/210216 5.6 Iterables.md
@@ -2,7 +2,7 @@ tags: #JavaScript #data-type #modern-js #english
 
 ---
 
-## Iterables
+## 5.6 Iterables
 *Iterable* objects are a generalization of arrays. This is the concept that allows to make any object usable in a `for..of` loop.
 
 Besides `Array`, there are many other built-in objects that are iterable. For instance, `String` is also iterable.
