--- a/JavaScript/210216 5.7 Map and Set pt.1.md
+++ b/JavaScript/210216 5.7 Map and Set pt.1.md
@@ -1,5 +1,5 @@
 tags: #JavaScript #data-type #modern-js #english
-related: [[210217 Map and Set pt.2]]
+related: [[210217 5.7 Map and Set pt.2]]
 
 ---
 
@@ -9,7 +9,7 @@ Until now, we've learned following two complex data structures: *Objects* and *A
 
 But these two are not enough for real life. Let's take a look at the `Map` and `Set`.
 
-## Map
+## 5.7 Map
 Just like an `Object`, *Map* is a collection of keyed data items. But the difference is that `Map` allows keys of any type.
 
 ### methods and properties
