--- a/JavaScript/210217 5.7 Map and Set pt.2.md
+++ b/JavaScript/210217 5.7 Map and Set pt.2.md
@@ -1,9 +1,9 @@
 tags: #JavaScript #data-type #modern-js #english
-related: [[210216 Map and Set pt.1]]
+related: [[210216 5.7 Map and Set pt.1]]
 
 ---
 
-## Object.entries: Map from Object
+## 5.7 Object.entries: Map from Object
 
 We can pass an array (or another iterable) with key/value pairs as an element (or data) of the map when we create one:
 ```js
