--- a/JavaScript/210218 5.8 WeakMap and WeakSet.md
+++ b/JavaScript/210218 5.8 WeakMap and WeakSet.md
@@ -2,7 +2,7 @@ tags: #JavaScript #data-type #modern-js #english
 
 ---
 
-We learned from *[[210120 Garbage Collection | Garbage Collection]]* section that JavaScript engine stores a value in memory as long as it's reachable.
+We learned from *[[210120 4.3 Garbage Collection | Garbage Collection]]* section that JavaScript engine stores a value in memory as long as it's reachable.
 
 For instance:
 ```js
@@ -32,7 +32,7 @@ Similarly, we can use an object as a key in a regular `Map`, and while the `Map`
 
 `WeakMap` is fundamentally different in this aspect. It doesn't prevent garbage-collection of key objects.
 
-## WeakMap
+## 5.8 WeakMap
 In `WeakMap`, keys **must** be objects not primitive values:
 
 ```js
