--- a/JavaScript/210119 4.2 Object References and Copying.md
+++ b/JavaScript/210119 4.2 Object References and Copying.md
@@ -1,6 +1,6 @@
 tags: #JavaScript #object #korean
 
-## 참조에 의한 객체 복사
+## 4.2 참조에 의한 객체 복사
 - 원시 자료형(primitive data types)의 값들은 '값 그대로' 저장/할당되고 복사된다. 
 - 객체는 참조에 의해 (by reference) 저장되고 복사가 이루어진다.
 
