--- a/JavaScript/210131 4.8 Object to primitive coversion.md
+++ b/JavaScript/210131 4.8 Object to primitive coversion.md
@@ -1,6 +1,6 @@
 tags: #JavaScript #object #english
 
-## Object to Primitive Conversion
+## 4.8 Object to Primitive Conversion
 When we perform arithmetic operations with objects, it will be converted into primitives. For example, results of the following code will be a primitive: `obj + obj`, `obj - obj`, or `alert(obj)`.
 
 1. boolean conversion -> all objects are `true`.
