--- a/JavaScript/210206 5.3 Strings.md
+++ b/JavaScript/210206 5.3 Strings.md
@@ -2,7 +2,7 @@ tags: #JavaScript #modern-js #data-type #english
 
 <hr />
 
-## Strings
+## 5.3 Strings
 Unlike other type languages where they have two different types to represent a *character* and a *string*, in JavaScript all characters are of type `String` and its internal format for strings is always [UTF-16](https://en.wikipedia.org/wiki/UTF-16); it is not tied to the page encoding.
 
 ## Quotes
